--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
 	"tasks": {
-		"client": "deno run -Ar webapp/main.ts & deno run -Ar client/main.ts",
+		"client": "deno run -Ar client/main.ts",
+		"webapp": "deno run -Ar webapp/main.ts",
 		"server": "deno run -Ar server/main.ts"
 	},
 	"importMap": "./import_map.json",
