--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,9 @@
 {
 	"tasks": {
-		"client": "deno run -Ar client/main.ts",
-		"webapp": "deno run -Ar webapp/main.ts",
+		"client": "CLIENT_NO=0 deno run -Ar client/main.ts",
+		"webapp": "CLIENT_NO=0 deno run -Ar webapp/main.ts",
+		"client2": "CLIENT_NO=1 deno run -Ar client/main.ts",
+		"webapp2": "CLIENT_NO=1 deno run -Ar webapp/main.ts",
 		"server": "deno run -Ar server/main.ts"
 	},
 	"importMap": "./import_map.json",
