--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
 	"deno.enable": true,
 	"[typescript]": {
 		"editor.defaultFormatter": "denoland.vscode-deno"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "denoland.vscode-deno",
+		"editor.quickSuggestions": {
+			"strings": true
+		}
 	}
 }
