try fix task not terminate on crash

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
 	"tasks": {
-		"clienti": "deno run -Ar client/main.ts & deno run -Ar webapp/main.ts",
+		"clienti": "(deno run -Ar webapp/main.ts && false) & (deno run -Ar client/main.ts && false)",
 		"client": "CLIENT_NO=0 deno task clienti",
 		"client2": "CLIENT_NO=1 deno task clienti",
 		"server": "deno run -Ar server/main.ts"
