--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,11 @@
 {
 	"tasks": {
-		"clienti": "(deno run -Ar webapp/main.ts && false) & (deno run -Ar client/main.ts && false)",
-		"client": "CLIENT_NO=0 deno task clienti",
-		"client2": "CLIENT_NO=1 deno task clienti",
+		"client": "deno run -Ar client/main.ts",
+		"client1": "CLIENT_NO=0 deno task client",
+		"client2": "CLIENT_NO=1 deno task client",
+		"webapp": "deno run -Ar webapp/main.ts",
+		"webapp1": "CLIENT_NO=0 deno task webapp",
+		"webapp2": "CLIENT_NO=1 deno task webapp",
 		"server": "deno run -Ar server/main.ts"
 	},
 	"importMap": "./import_map.json",
