--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
 	"tasks": {
 		"client": "deno run -Ar client/main.ts",
 		"client1": "CLIENT_NO=0 deno task client",
+		"client1-debug": "CLIENT_NO=0 deno run -Ar --inspect client/main.ts",
 		"client2": "CLIENT_NO=1 deno task client",
 		"webapp": "deno run -Ar webapp/main.ts",
 		"webapp1": "CLIENT_NO=0 deno task webapp",
